--- a/rn-first/package.json
+++ b/rn-first/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "braces": "^3.0.2",
     "expo": "^35.0.0",
+    "mem": "^6.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
